# udemy_go_course

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod
cards/: BUILD.bazel  deck.go  deck_test.go
design_patterns/abstract_factory/: BUILD.bazel  main.go  shoe.go  short.go  sportFactory.go
design_patterns/builder/: BUILD.bazel  builder.go  main.go
design_patterns/composition/: BUILD.bazel  client.go  main.go
design_patterns/mediator/: BUILD.bazel  main.go  train.go
design_patterns/object_pool/: BUILD.bazel  main.go  pool.go
design_patterns/prototype/: BUILD.bazel  inode.go  main.go
design_patterns/visitor/: BUILD.bazel  main.go  shape.go
even_odd/: BUILD.bazel  main.go
helloworld/: BUILD.bazel  main.go
http/: BUILD.bazel  main.go
interfaces/: BUILD.bazel
map/: BUILD.bazel  main.go
test/: BUILD.bazel  main.go
