load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "builder_lib",
    srcs = [
        "builder.go",
        "main.go",
    ],
    importpath = "github.com/yibozhuang/udemy_go_course/design_patterns/builder",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "builder",
    embed = [":builder_lib"],
    visibility = ["//visibility:public"],
)
