load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "composition_lib",
    srcs = [
        "client.go",
        "main.go",
    ],
    importpath = "github.com/yibozhuang/udemy_go_course/design_patterns/composition",
    visibility = ["//visibility:private"],
    deps = ["@com_github_sirupsen_logrus//:logrus"],
)

go_binary(
    name = "composition",
    embed = [":composition_lib"],
    visibility = ["//visibility:public"],
)
