load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "prototype_lib",
    srcs = [
        "inode.go",
        "main.go",
    ],
    importpath = "github.com/yibozhuang/udemy_go_course/design_patterns/prototype",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "prototype",
    embed = [":prototype_lib"],
    visibility = ["//visibility:public"],
)
